--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,27 @@
 version: "3.3"
+x-environment: &environment
+  environment:
+    ########################################################################
+    # ------------ MANDATORY (CHANGE ACCORDING TO YOUR SETUP) ------------#
+    ########################################################################
+
+    # PostgreSQL DB for Formbricks to connect to
+    DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/formbricks?schema=public"
+
+    # Uncomment to enable a dedicated connection pool for Prisma using Prisma Data Proxy
+    # Cold boots will be faster and you'll be able to scale your DB independently of your app.
+    # @see https://www.prisma.io/docs/data-platform/data-proxy/use-data-proxy
+    # PRISMA_GENERATE_DATAPROXY=true
+    PRISMA_GENERATE_DATAPROXY:
+
+    # NextJS Auth
+    # @see: https://next-auth.js.org/configuration/options#nextauth_secret
+    # You can use: `openssl rand -base64 32` to generate one
+    NEXTAUTH_SECRET: RANDOM_STRING
+    # Set this to your public-facing URL, e.g., https://example.com
+    # You do not need the NEXTAUTH_URL environment variable in Vercel.
+    NEXTAUTH_URL: http://localhost:3000
+
 services:
   postgres:
     restart: always
@@ -10,15 +33,12 @@ services:
 
   formbricks:
     restart: always
-    build:
-      context: .
-      dockerfile: ./apps/web/Dockerfile
+    image: formbricks/formbricks:latest
     depends_on:
       - postgres
     ports:
       - 3000:3000
-    env_file:
-      - .env
+    <<: *environment
 
 volumes:
   postgres:
