--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - docker-push-on-release-ci
+      - main
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -28,23 +28,6 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm install --config.platform=linux --config.architecture=x64
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./apps/web/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/formbricks:latest
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
