--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   formbricks:
     restart: always
-    image: formbricks/formbricks:latest
+    image: laalshaitaan/formbricks:latest
     depends_on:
       - postgres
     ports:
