--- a/.github/workflows/release-on-dockerhub.yml
+++ b/.github/workflows/release-on-dockerhub.yml
@@ -30,10 +30,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Get Release Tag
+        id: extract_release_tag
+        run: |
+          TAG=${{ github.ref }}
+          TAG=${TAG#v}
+          echo "::set-output name=RELEASE_TAG::$TAG"
+        
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./apps/web/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/formbricks:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/formbricks:${{ steps.extract_release_tag.outputs.RELEASE_TAG }}
+            ${{ secrets.DOCKER_USERNAME }}/formbricks:latest
