--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,9 +46,10 @@ jobs:
 
       - name: Build Formbricks Image & Run
         run: |
-          mkdir -p /tmp/docker-cache  # Ensure the directory exists
+          mkdir -p /tmp/docker-cache
           docker-compose build
-          docker save formbricks:latest > /tmp/docker-cache/image.tar
+          docker images  # List all Docker images for debugging
+          docker save formbricks_formbricks:latest > /tmp/docker-cache/image.tar  # Adjust the image name/tag accordingly
           docker-compose up -d
 
       - name: Install Playwright Browsers
