--- a/.github/workflows/kamal.yml
+++ b/.github/workflows/kamal.yml
@@ -71,7 +71,8 @@ jobs:
       S3_BUCKET_NAME: ${{ vars.S3_BUCKET_NAME }}
       OPENTELEMETRY_LISTENER_URL: ${{ vars.OPENTELEMETRY_LISTENER_URL }}
       RATE_LIMITING_DISABLED: ${{ vars.RATE_LIMITING_DISABLED }}
-      REDIS_CLIENT_URL: ${{ vars.REDIS_CLIENT_URL }}
+      REDIS_CLIENT_URL: ${{ secrets.REDIS_CLIENT_URL }}
+      REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
       KAMAL_REGISTRY_PASSWORD: ${{ secrets.KAMAL_REGISTRY_PASSWORD }}
 
     steps:
