test: kamal retain containers property

--- a/kamal/deploy.yml
+++ b/kamal/deploy.yml
@@ -2,23 +2,23 @@
 service: formbricks-kamal
 
 # Name of the container image.
-image: formbricks/formbricks-cloud
+image: shubhampalriwala/formbricks
 
 # Deploy to these servers.
 servers:
   web: # Use a named role, so it can be used as entrypoint by Traefik
     hosts:
-      - 18.196.187.144
+      - 34.247.22.186
     labels:
       traefik.http.routers.formbricks-kamal.entrypoints: websecure
-      traefik.http.routers.formbricks-kamal.rule: Host(`app.formbricks.com`)
+      traefik.http.routers.formbricks-kamal.rule: Host(`kamal.shubham.formbricks.com`)
       traefik.http.routers.formbricks-kamal.tls.certresolver: letsencrypt
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   server: ghcr.io
-  username: mattinannt
+  username: shubhampalriwala
 
   # Always use an access token rather than real password when possible.
   password:
@@ -116,6 +116,8 @@ builder:
 #     arch: amd64
 #     host: ssh://app@192.168.0.1
 
+retain_containers: 3
+
 traefik:
   options:
     publish:
@@ -129,7 +131,7 @@ traefik:
     entryPoints.web.http.redirections.entryPoint.scheme: https
     entryPoints.web.http.redirections.entrypoint.permanent: true
     entrypoints.websecure.http.tls: true
-    entrypoints.websecure.http.tls.domains[0].main: "app.formbricks.com"
+    entrypoints.websecure.http.tls.domains[0].main: "kamal.shubham.formbricks.com"
     entrypoints.websecure.http.tls.domains[0].sans: "*.formbricks.com"
     certificatesResolvers.letsencrypt.acme.email: "hola@formbricks.com"
     certificatesResolvers.letsencrypt.acme.storage: "/letsencrypt/acme.json"
@@ -157,7 +159,7 @@ accessories:
   #     - data:/var/lib/mysql
   redis:
     image: redis:7.0
-    host: 18.196.187.144
+    host: 34.247.22.186
     port: 6379
     directories:
       - data:/data
